@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999974';
+our $VERSION='0.999975';
 
 
 use 5.005;
